test/bad/arrays/array05.px

a = [5, 6]
a.length = 3
